--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -2,6 +2,44 @@
 
 {% block body %}
 
-欢迎来到后台管理系统！
+{{ super() }}
 
-{% endblock %}
+{% if current_user.is_authenticated %}
+
+<h2 style="text-align: center">欢迎来到后台管理系统！</h2>
+
+{% else %}
+<style>
+    .loginBox {
+			width: 400px;
+			height: 320px;
+			background-color: #ffffff;
+			margin: 100px auto;
+			border-radius: 10px;
+			box-shadow: 0 15px 15px 0 rgba(0, 0, 0, .6);
+			padding: 40px;
+			box-sizing: border-box;
+			text-align: center;
+	}
+
+</style>
+<div class="loginBox">
+    <h2 style="text-align:center;margin-bottom:30px;">管理员登录</h2>
+    <div>
+        <form method="post" action="{{link}}">
+            {% for field in form if field.type != 'CSRFTokenField' %}
+            <div>
+                <div class="form-inline row">{{ field.label }} {{ field }}</div>
+                {% for e in field.errors %}
+                <span style="color: red">*{{e}}</span>
+                {% endfor %}
+                <div style="padding: 15px"></div>
+            </div>
+            {% endfor %}
+            <button class="btn">登录</button>
+        </form>
+    </div>
+</div>
+{% endif %}
+
+{% endblock body %}
